bonus/gitlab/gitlab-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gitlab
  name: gitlab-svc
  namespace: gitlab
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
    name: http
  - port: 22
    protocol: TCP
    targetPort: 22 
    name: ssh
  selector:
    app: gitlab
  type: LoadBalancer
